[devtools] Support JBR 25 (allow native access)